AM_CXXFLAGS = -std=c++11 

bin_PROGRAMS = 

bin_PROGRAMS += type_demo
type_demo_SOURCES = type_demo.cpp

bin_PROGRAMS += sstream_demo
sstream_demo_SOURCES = sstream_demo.cpp

bin_PROGRAMS += template_demo
template_demo_SOURCES = template_demo.cpp

bin_PROGRAMS += namespace_demo
namespace_demo_SOURCES = namespace_demo.cpp

bin_PROGRAMS += test
test_SOURCES = test.cc

bin_PROGRAMS += new_demo
new_demo_SOURCES = new_demo.cpp

bin_PROGRAMS += inherite_demo
inherite_demo_SOURCES = inherite_demo.cpp
